@@ -1,0 +1,1 @@
+PYTHONPATH="/media/twilight/Worker/GitHub/repo.twilight0.libs/script.module.tulip/lib/:/media/twilight/Worker/GitHub/plugin.video.youtube/resources/lib/"
