@@ -1,8 +1,9 @@
 ﻿<?xml version="1.0" encoding="UTF-8" standalone="yes"?>
-<addon id="plugin.video.alphatv.gr" version="2.1.0" name="ALPHA Player" provider-name="Twilight0">
+<addon id="plugin.video.alphatv.gr" version="2.2.0" name="ALPHA Player" provider-name="Twilight0">
 	<requires>
-		<import addon="xbmc.python" version="2.24.0" />
-		<import addon="script.module.tulip" version="2.6.4" />
+		<import addon="xbmc.addon" version="16.1.000"/>
+		<import addon="script.module.tulip" version="2.8.1" />
+		<import addon="script.module.kodi-six" version="0.0.2"/>
 	</requires>
 	<extension point="xbmc.python.pluginsource" library="addon.py">
 		<provides>video</provides>
@@ -18,7 +19,15 @@
 		<source>https://github.com/Twilight0/plugin.video.alphatv.gr</source>
 		<website>http://www.alphatv.gr/</website>
         <size>598620</size>
-		<news>[B]2.1.0[/B]
+		<news>[B]2.2.0[/B]
+- Add pagination for long lists (# items per page are selectable)
+- Tweaked strings integers
+- Tweaked imports for Matrix
+- Updated youtube api key
+- Episode order in now by default reversed (greek website provides new episodes on top)
+- Various other tweaks
+
+[B]2.1.0[/B]
 - Update youtube api key
 - Update indexers
 - Update resolvers
