@@ -3,9 +3,13 @@
 
     <category label="32006">
 
-        <setting label="32007" type="action" action="RunPlugin(plugin://$ID/?action=selector)" option="close"/>
-        <setting label="32022" type="action" action="RunPlugin(plugin://$ID/?action=cache_clear)" option="close"/>
+        <setting label="30007" type="action" action="RunPlugin(plugin://$ID/?action=selector)" option="close"/>
+        <setting label="30022" type="action" action="RunPlugin(plugin://$ID/?action=cache_clear)" option="close"/>
+        <setting id="reverse" type="bool" label="30027" default="true"/>
+        <setting id="paginate" type="bool" label="30023" default="true"/>
+        <setting id="pagination_integer" type="slider" label="30024" default="100" range="50,50,300" option="int" enable="eq(-1,true)"/>
         <setting id="region" label="Region" type="text" default="GR" visible="false"/>
+        <setting id="page" type="text" label="Pagination" default="0" visible="false"/>
 
     </category>
 
