@@ -1,3 +1,11 @@
+[B]2.2.0[/B]
+- Add pagination for long lists (# items per page are selectable)
+- Tweaked strings integers
+- Tweaked imports for Matrix
+- Updated youtube api key
+- Episode order in now by default reversed (greek website provides new episodes on top)
+- Various other tweaks
+
 [B]2.1.0[/B]
 - Update youtube api key
 - Update indexers
